hugr-llvm/src/extension/snapshots/hugr_llvm__extension__logic__test__and@llvm14.snap
---
source: src/extension/logic.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, {} } @_hl.main.1({ i32, {}, {} } %0, { i32, {}, {} } %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = extractvalue { i32, {}, {} } %0, 0
  %3 = extractvalue { i32, {}, {} } %1, 0
  %4 = and i32 %2, %3
  %5 = trunc i32 %4 to i1
  %6 = select i1 %5, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  ret { i32, {}, {} } %6
}
