hugr-llvm/src/extension/snapshots/hugr_llvm__extension__logic__test__and@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/logic.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i1 @_hl.main.1(i1 %0, i1 %1) {
alloca_block:
  %"0" = alloca i1, align 1
  %"1" = alloca i1, align 1
  %"01" = alloca i1, align 1
  %"2_0" = alloca i1, align 1
  %"2_1" = alloca i1, align 1
  %"4_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, i1* %"0", align 1
  store i1 %1, i1* %"1", align 1
  %"02" = load i1, i1* %"0", align 1
  %"13" = load i1, i1* %"1", align 1
  store i1 %"02", i1* %"2_0", align 1
  store i1 %"13", i1* %"2_1", align 1
  %"2_04" = load i1, i1* %"2_0", align 1
  %"2_15" = load i1, i1* %"2_1", align 1
  %"2_06" = load i1, i1* %"2_0", align 1
  %"2_17" = load i1, i1* %"2_1", align 1
  %2 = and i1 %"2_06", %"2_17"
  %3 = select i1 %2, i1 true, i1 false
  store i1 %3, i1* %"4_0", align 1
  %"4_08" = load i1, i1* %"4_0", align 1
  store i1 %"4_08", i1* %"01", align 1
  %"09" = load i1, i1* %"01", align 1
  ret i1 %"09"
}
